--- a/public/about.html
+++ b/public/about.html
@@ -92,7 +92,7 @@
                                 <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
 
                                     <ul style="width:120px; overflow: hidden; !important">
-                                        <li style="width: 25px !important"><a href="chn/ch_index.html">Chinese</a></li>
+                                        <li style="width: 25px; font-family: NotoSansTraditional; !important"><a href="chn/ch_index.html">中文</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -133,8 +133,8 @@
         
         <p>eCheckID provides a mobile product information and marketing communication platform for brands to communicate directly with consumers.
             Our solution allows brands to uniquely identify each unit of product via the proprietary eCheckID code.  This barcode, when scanned by the consumers’
-            mobile device, validates the authenticity of the product they purchase as well as provide safety information like allergy warning, product recall and usage information.
-            Consumers can register their purchase of the product and interact with their social networks, all from the convenient of their mobile phone or tablet.  The eCheckID app
+            mobile device, validates the authenticity of the product they purchase as well as provide safety information like allergy warning, product recalls, and usage information.
+            Consumers can register their purchase of the product and interact with their social networks, all from the convenience of their mobile phone or tablet.  The eCheckID app
             is also the repository of all discount and promotional offers from all the brands consumers care about.  They can easily take advantage of loyalty, rebate or other promotional
             programs without having to do anything more than scanning the eCheckID code with their mobile device.  </p>
 		<br />
@@ -153,7 +153,7 @@
 
             </ul>
 
-            eCheckID is headquartered in California’s Silicon Valley, and operates development and data center in Beijing and Chicago.
+            eCheckID is headquartered in California’s Silicon Valley, and operates development and data centers in Beijing and Chicago.
 
         </p><br/>
     
