--- a/public/chn/about.html
+++ b/public/chn/about.html
@@ -86,7 +86,7 @@
                                 <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
-                                <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
+                                <li style="color: #000000; height: 80px !important"><a href="#">中文 <i class="fa fa-angle-down"></i></a>
 
                                     <ul style="width:115px; overflow: hidden; !important">
                                         <li style="width: 25px !important"><a href="../index.html">English</a></li>
@@ -196,12 +196,12 @@
                   <div class="cont-area">
                       <!--<img src="http://placehold.it/210x230" alt="" class="teammempic" />  -->
                       <ul>
-                          <li><strong>浩列文<i> - 顾问董事</i></strong></li>
+                          <li><strong>浩列文 "Holger Liepmann" <i> - 顾问董事</i></strong></li>
                            <!--   <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
                           <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>     -->
                       </ul>
                  </div>
-                 <p>浩列文是一位(精通咨询与董事会活动的-Delete)资深的(管理人-Delete) 全球高管。1986至2011年就职于美国雅培 （Abbott Laboratories) 公司。(并-Delte)从2006年起，浩列文担任主管雅培營養产品的副总栽。在任内, 他管理大于50亿美元的全球營養产品生意。他还曾在负责雅培国际制药业务的雅培国际担任多項职务。并在日本，西班牙，波多黎各，德国和美国有过工作经历。在加入雅培以前，浩列文曾在1975至1986年间任职于德国拜耳公司 (Bayer AG)。他本科就读于达特茅斯学院，并在斯坦福大学获得MBA学位。</p>
+                 <p>浩列文是一位资深的 全球高管。1986至2011年就职于美国雅培 （Abbott Laboratories) 公司。从2006年起，浩列文担任主管雅培營養产品的副总栽。在任内, 他管理大于50亿美元的全球營養产品生意。他还曾在负责雅培国际制药业务的雅培国际担任多項职务。并在日本，西班牙，波多黎各，德国和美国有过工作经历。在加入雅培以前，浩列文曾在1975至1986年间任职于德国拜耳公司 (Bayer AG)。他本科就读于达特茅斯学院，并在斯坦福大学获得MBA学位。</p>
               </div>
 
           </div>
