--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -91,7 +91,7 @@
                                 <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
-                                <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
+                                <li style="color: #000000; height: 80px !important"><a href="#">中文<i class="fa fa-angle-down"></i></a>
 
                                     <ul style="width:115px; overflow: hidden; !important">
                                         <li style="width: 25px !important"><a href="../index.html">English</a></li>
@@ -129,7 +129,7 @@
                 <!-- SLIDE 1 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="../images/sliders/image3.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="../images/sliders/image3.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption customout sfr"
                          data-x="right" data-hoffset="0"
@@ -154,7 +154,7 @@
                          data-endspeed="300"
                          data-endeasing="Power1.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">解答
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional; !important;">解答
                     </div>
 
                     <div class="tp-caption large_bold_white customin ltl"
@@ -166,7 +166,7 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;"><strong>产品安全 忧虑</strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional; !important;"><strong>产品安全 忧虑</strong>
                     </div>
 
                    <!-- <div class="tp-caption large_bold_white skewfromrightshort customout"
@@ -213,7 +213,7 @@
                 <!-- SLIDE 2 -->
                 <li data-transition="slidedown" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="../images/sliders/image1.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="../images/sliders/image1.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption mediumlarge_light_white skewfromleft customout"
                          data-x="10"
@@ -245,7 +245,7 @@
                 <!-- SLIDE 3 -->
                 <li data-transition="zoomout" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="../images/sliders/image2.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="../images/sliders/image2.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption mediumlarge_light_white skewfromleft customout"
                          data-x="right"
@@ -301,16 +301,24 @@
 <div class="clearfix"></div>
 
 <div class="joosa punch_text01">
-    <div class="container">
-
-        <a href="http://v.youku.com/v_show/id_XNzczNDc0ODUy.html" class="pur_link" target="_blank"><i class="fa fa-location-arrow"></i>&nbsp; See Demo</a>
+    <div class="container" style="text-align: center !important;">
+        <a href="" class="pur_link"><i class="fa fa-arrow-down"></i>&nbsp; See Demo</a>
 
     </div>
 </div><!-- end punch text section -->
 
 <div class="carve_graph_02"></div>
 
-<div class="clearfix mar_top3"></div>
+<div class="joosa bottom_section">
+    <div class="container">
+
+        <div class="full" style="text-align: center !important">
+            <iframe width="680" height="370" src="http://player.youku.com/player.php/sid/XNzczNDc0ODUy/v.swf" frameborder="0" allowfullscreen type="application/x-shockwave-flash"></iframe>
+
+        </div>
+        <div class="clearfix mar_top10"></div>
+        </div>
+</div>
 
 <div class="joosa bottom_section">
     <div class="container" style="font-family: NotoSansTraditional; !important">
@@ -321,15 +329,17 @@
 
                 <!-- section 1 -->
 
-                <span class="acc-trigger" title="click header to collapse; image to expand"><a href="#" class="t"><h2><strong>消费者</strong></h2></a></span>
-                <div class="acc-container">
+                <span class="" title="click header to collapse; image to expand"><h2><strong>消费者</strong></h2></span>
+                <div class="">
                     <div class="content"></div>
                     <span class="acc-trigger" style="width: 100%"></span>
                 </div>
 
-                <span class="acc-trigger active"><a href="#"><img src="../images/for_con_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
-                <div class="acc-container">
+
+                <span class=""><img src="../images/for_con_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></span>
+                <div class="">
                     <div class="content">
+                        <img src="../images/h-lines1.png" width="100%  " alt=""/>
                         <p>
                             随着伪造产品在全球的盛行及消费者对食品安全的关注，消费者需要一个实时系统来确定真伪，产品来源，有效期，过敏原或召回状态等信息。全息贴纸 (holographic sticker)
                             等过时的产品认证方法并不可靠且易被伪造。并且固定的产品包装印刷并不能实时提供产品的状态，详情或当前展开的促销活动。
@@ -364,15 +374,16 @@
 
                 <!-- section 1 -->
 
-                <span class="acc-trigger1" title="click header to collapse; image to expand"><a href="#" class="t"><h2><strong>品牌厂商</strong></h2></a></span>
-                <div class="acc-container1">
+                <span class=""><h2><strong>品牌厂商</strong></h2></span>
+                <div class="">
                     <div class="content"></div>
                     <span class="acc-trigger1" style="width: 100%"></span>
                 </div>
 
-                <span class="acc-trigger1 active"><a href="#"><img src="../images/for_bra_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
-                <div class="acc-container1">
+                <span class=""><img src="../images/for_bra_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></span>
+                <div class="">
                     <div class="content">
+                        <img src="../images/h-lines1.png" width="100%  " alt=""/>
                         <p>
                             易知网为品牌厂商提供易于部署的移动平台服务，通过防伪措施和提供与消费者直接互动的渠道来提升品牌价值。
                             重要的产品信息，交叉销售，追加销售或促销信息可直接推送给目标消费者的手机或平板电脑等移动设备上。
@@ -390,15 +401,10 @@
 
                             易知网解决方案通过云端传送，所以极易部署。而且，识别每个产品单元的易知网二維码能够嵌入商标和色彩，从而提升产品的品牌特性。
                             <br/>
-
-
-
+                        </p>
                     </div>
                 </div>
-
-
             </div>
-
         </div><!-- end people says section -->
 
         <img src="../images/h-lines1.png" width="100%  " alt=""/>
@@ -431,18 +437,13 @@
 
         </div>
 
-        <div class="one_half last">
-
-
-
-        </div>
 
     </div>
 
 </div><!-- end copyright info -->
 
 
-
+</div>
 
 </div>
 </div>
