--- a/public/chn/wedo.html
+++ b/public/chn/wedo.html
@@ -87,7 +87,7 @@
                                 <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
-                                <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
+                                <li style="color: #000000; height: 80px !important"><a href="#">中文 <i class="fa fa-angle-down"></i></a>
 
                                     <ul style="width:115px; overflow: hidden; !important">
                                         <li style="width: 25px !important"><a href="../index.html">English</a></li>
