--- a/public/contact.html
+++ b/public/contact.html
@@ -92,7 +92,7 @@
                                         <li style="color: #000000; height: 80px !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
 
                                             <ul style="width:120px; overflow: hidden; !important">
-                                                <li style="width: 25px !important"><a href="chn/ch_index.html">Chinese</a></li>
+                                                <li style="width: 25px; font-family: NotoSansTraditional; !important"><a href="chn/ch_index.html">中文</a></li>
                                             </ul>
                                         </li>
                                     </ul>
