--- a/public/index_old.html
+++ b/public/index_old.html
@@ -129,7 +129,7 @@
                 <!-- SLIDE 1 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="images/sliders/image3.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="images/sliders/image3.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption customout sfr"
                          data-x="right" data-hoffset="0"
@@ -213,7 +213,7 @@
                 <!-- SLIDE 2 -->
                 <li data-transition="zoomout" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="images/sliders/image2.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="images/sliders/image2.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption mediumlarge_light_white skewfromleft customout"
                          data-x="right"
@@ -260,7 +260,7 @@
                 <!-- SLIDE 3 -->
                 <li data-transition="slidedown" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="images/sliders/image1.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="images/sliders/image1.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption mediumlarge_light_white skewfromleft customout"
                          data-x="10"
