--- a/public/wedo.html
+++ b/public/wedo.html
@@ -74,19 +74,19 @@
 
                             <ul id="tiny">
 
-                                <li><a href="index" class="">Home</a></li>
+                                <li><a href="index.html" class="">Home</a></li>
 
-                                <li><a href="wedo" target="_self" class="active">What We Do <i class="fa"></i></a>
+                                <li><a href="wedo.html" target="_self" class="active">What We Do <i class="fa"></i></a>
 
 
                                 </li>
 
-                                <li><a href="about">About Us <i class="fa"></i></a>
+                                <li><a href="about.html">About Us <i class="fa"></i></a>
 
                                 </li>
 
                                 <li><a href="http://echeckid.wordpress.com/" target="_blank">Blog </a></li>
-                                <li><a href="contact">Contact</a></li>
+                                <li><a href="contact.html">Contact</a></li>
 
                                 <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
 
@@ -133,7 +133,7 @@
 
     <div class="accrodation">
 
-        <h2>What we do</strong></h2>
+        <h2>What we do</h2>
 
         <!-- section 1 -->
         <span class="acc-trigger active"><a href="#" style="font-size: 20px">General Overview</a></span>
@@ -271,7 +271,7 @@
 
         <div class="one_half">
 
-            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy">Privacy Policy</a></b>
+            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy.html">Privacy Policy</a></b>
 
         </div>
 
