Fix URLs in navbar and privacy policy section. Fix some HTML validation errors.

--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -77,19 +77,19 @@
 
                             <ul id="tiny">
 
-                                <li><a href="ch_index" class="active">主頁</a></li>
+                                <li><a href="ch_index.html" class="active">主頁</a></li>
 
-                                <li><a href="wedo" target="_self">我们的业务<i class="fa"></i></a>
+                                <li><a href="wedo.html" target="_self">我们的业务<i class="fa"></i></a>
 
 
                                 </li>
 
-                                <li><a href="about">关于我们<i class="fa"></i></a>
+                                <li><a href="about.html">关于我们<i class="fa"></i></a>
 
                                 </li>
 
                                 <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
-                                <li><a href="contact">联络我们</a></li>
+                                <li><a href="contact.html">联络我们</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">中文<i class="fa fa-angle-down"></i></a>
 
@@ -329,7 +329,7 @@
                 <span class=""><img src="../images/for_con_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></span>
                 <div class="">
                     <div class="content">
-                        <img src="../images/h-lines1.png" width="100%  " alt=""/>
+                        <img src="../images/h-lines1.png" width="100%" alt=""/>
                         <p>
                             随着伪造产品在全球的盛行及消费者对食品安全的关注，消费者需要一个实时系统来确定真伪，产品来源，有效期，过敏原或召回状态等信息。全息贴纸 (holographic sticker)
                             等过时的产品认证方法并不可靠且易被伪造。并且固定的产品包装印刷并不能实时提供产品的状态，详情或当前展开的促销活动。
@@ -423,7 +423,7 @@
 
         <div class="one_half">
 
-            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy">Privacy Policy</a></b>
+            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy.html">Privacy Policy</a></b>
 
         </div>
 
@@ -435,7 +435,6 @@
 
 </div>
 
-</div>
 </div>
 
 
