--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -139,9 +139,7 @@
                             <li><i class="fa fa-mail-reply-all fa-lg"></i> <a href="mailto:info@echeckid.com">&nbsp;info@echeckid.com</a></li>
 
                         </ul>
-                        <ul class="">
-                            <img src="../images/h-lines1.png" alt=""/>
-                        </ul>
+                        <img src="../images/h-lines1.png" alt=""/>
 
 
 
@@ -203,7 +201,8 @@
 
                     <div class="one_half">
 
-                        <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy">Privacy Policy</a></b>
+                        <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy.html">Privacy Policy</a></b>
+
 
                     </div>
                 </div>
