--- a/public/chn/wedo.html
+++ b/public/chn/wedo.html
@@ -75,17 +75,12 @@
 
                                 <li><a href="ch_index.html" class="">主頁</a></li>
 
-                                <li><a href="wedo" target="_self" class="active">我们的业务<i class="fa"></i></a>
+                                <li><a href="wedo.html" target="_self" class="active">我们的业务<i class="fa"></i></a></li>
 
-
-                                </li>
-
-                                <li><a href="about">关于我们<i class="fa"></i></a>
-
-                                </li>
+                                <li><a href="about.html">关于我们<i class="fa"></i></a></li>
 
                                 <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
-                                <li><a href="contact">联络我们</a></li>
+                                <li><a href="contact.html">联络我们</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">中文 <i class="fa fa-angle-down"></i></a>
 
@@ -251,7 +246,7 @@
 
         <div class="one_half">
 
-            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy">Privacy Policy</a></b>
+            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="privacy.html">Privacy Policy</a></b>
 
         </div>
 
