--- a/public/index.html
+++ b/public/index.html
@@ -483,7 +483,7 @@
 
 <!-- modal content -->
 <div id="basic-modal-content" style="text-align: center !important">
-    <iframe width="100%" class="myIframe" src="//www.youtube.com/embed/NNg-VaTywbU?rel=0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="100%" class="myIframe" src="http://www.youtube.com/embed/NNg-VaTywbU?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 
