Fix incorrect href for logo image.

--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -66,7 +66,7 @@
             <div class="container">
 
                 <!-- Logo -->
-                <div class="logo_main"><a href="index.html" id="logo"></a></div>
+                <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                 <!-- Menu -->
                 <div class="menu_main" style="font-family: NotoSansTraditional; !important">
