Fix incorrect CSS links on Chinese privacy policy page.

--- a/public/chn/privacy.html
+++ b/public/chn/privacy.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="../css/reset.css" type="text/css" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
 
-    <link rel="stylesheet" href="../css/font-awesome/../css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/font-awesome/css/font-awesome.min.css">
 
     <!-- responsive devices styles -->
     <link rel="stylesheet" media="screen" href="../css/responsive-leyouts.css" type="text/css" />
@@ -41,8 +41,8 @@
     <link rel="stylesheet" href="../js/sticky-menu/core.css">
 
     <!-- REVOLUTION SLIDER -->
-    <link rel="stylesheet" type="text/css" href="../js/revolutionslider/rs-plugin/../css/settings.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="../js/revolutionslider/../css/slider_main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../js/revolutionslider/rs-plugin/css/settings.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../js/revolutionslider/css/slider_main.css" media="screen" />
 
     <!-- jquery jcarousel -->
     <link rel="stylesheet" type="text/css" href="../js/jcarousel/skin2.css" />
