made additional changes for emboldened chars and mobile view

--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -55,14 +55,15 @@
         <!-- HEADER -->
         <header id="header">
 
+            <a href="ch_index.html">
+                <div id="echeck_logo" style="width: 249px; height: 97px;" ></div>
+            </a>
+
             <div id="trueHeader">
 
                 <div class="wrapper">
 
                     <div class="container">
-
-                        <!-- Logo -->
-                        <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                         <!-- Menu -->
                         <div class="menu_main" style="font-family: NotoSansTraditional; !important">
