--- a/public/contact.html
+++ b/public/contact.html
@@ -57,14 +57,16 @@
         <!-- HEADER -->
         <header id="header">
 
+            <a href="index.html">
+                <div id="echeck_logo" style="width: 249px; height: 97px;" ></div>
+            </a>
+
+
             <div id="trueHeader">
 
                 <div class="wrapper">
 
                     <div class="container">
-
-                        <!-- Logo -->
-                        <div class="logo_main"><a href="index.html" id="logo"></a></div>
 
                         <!-- Menu -->
                         <div class="menu_main">
