--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -59,14 +59,16 @@
 <!-- HEADER -->
 <header id="header">
 
+    <a href="ch_index.html">
+        <div id="echeck_logo" style="width: 249px; height: 97px;" ></div>
+    </a>
+
     <div id="trueHeader">
 
         <div class="wrapper">
 
             <div class="container">
 
-                <!-- Logo -->
-                <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                 <!-- Menu -->
                 <div class="menu_main" style="font-family: NotoSansTraditional; !important">
@@ -129,7 +131,7 @@
                 <!-- SLIDE 1 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="../images/sliders/image3.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="../images/sliders/1imagech.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption customout sfr"
                          data-x="right" data-hoffset="0"
@@ -154,7 +156,8 @@
                          data-endspeed="300"
                          data-endeasing="Power1.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional; !important;">解答
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional; !important;">
+                        <!--解答-->
                     </div>
 
                     <div class="tp-caption large_bold_white customin ltl"
@@ -166,7 +169,8 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional; !important;"><strong>产品安全 忧虑</strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional; !important;">
+                        <!--<strong>产品安全 忧虑</strong>-->
                     </div>
 
                    <!-- <div class="tp-caption large_bold_white skewfromrightshort customout"
@@ -213,7 +217,7 @@
                 <!-- SLIDE 2 -->
                 <li data-transition="slidedown" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="../images/sliders/image1.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="../images/sliders/2imagech.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption mediumlarge_light_white skewfromleft customout"
                          data-x="10"
@@ -225,7 +229,8 @@
                          data-endspeed="300"
                          data-endeasing="Power1.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">提供
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">
+                        <!--提供-->
                     </div>
 
                     <div class="tp-caption large_bold_white customin ltl"
@@ -237,7 +242,8 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;"><strong>产品和促销信息</strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;">
+                        <!--<strong>产品和促销信息</strong>-->
                     </div>
                 </li>
 
@@ -245,7 +251,7 @@
                 <!-- SLIDE 3 -->
                 <li data-transition="zoomout" data-slotamount="7" data-masterspeed="900" >
 
-                    <img src="../images/sliders/image2.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="../images/sliders/3imagech.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
                     <div class="tp-caption mediumlarge_light_white skewfromleft customout"
                          data-x="right"
@@ -257,7 +263,8 @@
                          data-easing="Power4.easeOut"
                          data-endspeed="500"
                          data-endeasing="Power4.easeIn"
-                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">建立直接
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">
+                        <!--建立直接-->
                     </div>
 
 
@@ -271,7 +278,8 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;"><strong> &nbsp;&nbsp;品牌与消费者互动 </strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;">
+                        <!--<strong> &nbsp;&nbsp;品牌与消费者互动 </strong>-->
                     </div>
 
                    <!-- <div class="tp-caption large_bold_white skewfromrightshort customout"
